--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -31,7 +31,7 @@
           required
         />
         <input type="submit" value="=" />
-        <input type="button" value="C" />
+        <input type="button" id="clearBtn" value="C" />
       </form>
     </div>
     <div id="calcResult"></div>
