operators fixed and defined

--- a/Server/Public/index.html
+++ b/Server/Public/index.html
@@ -20,10 +20,10 @@
           placeholder="First Number"
           required
         />
-        <input id="operation" type="button" value="+" />
-        <input id="operation" type="button" value="-" />
-        <input id="operation" type="button" value="*" />
-        <input id="operation" type="button" value="/" />
+        <input id="opt1" type="button" value="+" />
+        <input id="opt2" type="button" value="-" />
+        <input id="opt3" type="button" value="*" />
+        <input id="opt4" type="button" value="/" />
         <input
           id="secondNum"
           type="number"
